# Antares_Simulator_Nikola

./: .gitignore  README.md  mkdocs.yml  ortools_tag  simtest.json  sonar-project.properties
.github/workflows/: branchNameValidation.yml  build-userguide.yml  centos7.yml  clang-format.yml  docker.yml  doxygen.yml  new_release.yml  oracle8.yml  sonarcloud.yml  ubuntu.yml  windows-vcpkg.yml
docker/: AntaresDeps  Dockerfile
docs/: README.md  index.md
docs/Architecture_Decision_Records/: 2025-04-22-remove-regex-and-use-antlr.md
docs/developer-guide/: 0-Overview.md  1-Development-requirements.md  2-Dependencies-install.md  3-Build.md  6-Contributing.md  7-antlr4.md  CHANGELOG.md  TimeSeriesVariablesDesign.md  continuous-integration.md
docs/developer-guide/Architecture/: Dynamic-modeler-architecture.md
docs/user-guide/: 00-index.md  01-overview.md  02-install.md  03-getting_started.md  04-migration-guides.md  05-attribution_notices.md
docs/user-guide/modeler/: 00-index.md  01-overview-modeler.md  02-inputs.md  03-outputs.md  04-parameters.md  09-command-line.md
docs/user-guide/solver/: 00-index.md  02-inputs.md  03-outputs.md  04-parameters.md  05-model.md  07-thermal-heuristic.md  08-appendix.md  08-hybrid-studies.md  09-command-line.md  10-command-line.md
docs/user-guide/ts-generator/: 01-overview-tsgenerator.md
src/: CMakeLists.txt  CMakePresets.json  format-code.sh  vcpkg-configuration.json  vcpkg.json
src/api/: API.cpp  solver.cpp
src/api_client_example/: CMakeLists.txt
src/cmake/: common-settings.cmake
src/distrib/win32/: NSIS.template.in
src/expressions/: CMakeLists.txt
src/expressions/antlr-interface/: CMakeLists.txt  Expr.g4  Expr.interp  ExprBaseVisitor.h  ExprLexer.cpp  ExprLexer.h  ExprParser.cpp  ExprParser.h  ExprVisitor.h
src/expressions/nodes/: BinaryNode.cpp  ParentNode.cpp  TimeSumNode.cpp  UnaryNode.cpp
src/expressions/visitors/: AstDOTStyleVisitor.cpp  CloneVisitor.cpp  CompareVisitor.cpp  EvalVisitor.cpp  EvaluationContext.cpp  LinearityVisitor.cpp  PrintVisitor.cpp  TimeIndexVisitor.cpp
src/io/inputs/: CMakeLists.txt
src/io/inputs/data-series-csv-importer/: CMakeLists.txt  DataSeriesRepoImporter.cpp
src/io/inputs/data-series-csv-importer/include/antares/io/inputs/data-series-csv-importer/: DataSeriesRepoImporter.h
src/libs/antares/: CMakeLists.txt
src/libs/antares/additionalConstraintRhsExpression/: CMakeLists.txt  HoursField.g4  HoursField.interp  HoursFieldBaseVisitor.cpp  HoursFieldBaseVisitor.h  HoursFieldLexer.cpp  HoursFieldLexer.h  HoursFieldLexer.interp  HoursFieldLexer.tokens  HoursFieldParser.cpp  HoursFieldParser.h  HoursFieldVisitor.cpp  HoursFieldVisitor.h
src/libs/antares/optimization-options/: CMakeLists.txt  options.cpp
src/libs/antares/optimization-options/include/antares/optimization-options/: options.h
src/libs/antares/scenarioGroupParser/: CMakeLists.txt
src/modeler/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  main.cpp
src/modeler/loadFiles/: CMakeLists.txt  loadAll.cpp  readDataSeries.cpp  readLibraries.cpp  readScenarioGroup.cpp  readSystem.cpp
src/modeler/loadFiles/include/antares/solver/modeler/loadFiles/: data.h  loadFiles.h
src/modeler/modeler/: Modeler.cpp
src/modeler/parameters/: CMakeLists.txt  parseModelerParameters.cpp
src/optimisation/linear-problem-api/: linearProblemBuilder.cpp
src/optimisation/linear-problem-data-impl/: CMakeLists.txt  Scenario.cpp  dataSeriesRepo.cpp  linearProblemData.cpp  timeSeriesSet.cpp
src/optimisation/linear-problem-data-impl/include/antares/optimisation/linear-problem-data-impl/: dataSeries.h  dataSeriesRepo.h  linearProblemData.h  timeSeriesSet.h
src/optimisation/linear-problem-mpsolver-impl/: CMakeLists.txt  linearProblem.cpp  mipConstraint.cpp
src/optimisation/linear-problem-mpsolver-impl/include/antares/optimisation/linear-problem-mpsolver-impl/: linearProblem.h  mipConstraint.h  mipSolution.h
src/packaging/: CMakeLists.txt  Config.cmake.in
src/solver/: CMakeLists.txt
src/solver/application/: application.cpp
src/solver/hydro/: CMakeLists.txt  probleme_spx_wrapper.cpp
src/solver/infeasible-problem-analysis/: CMakeLists.txt  watched-constraints.cpp
src/solver/infeasible-problem-analysis/include/antares/solver/infeasible-problem-analysis/: watched-constraints.h
src/solver/lps/: CMakeLists.txt  LpsFromAntares.cpp
src/solver/misc/: options.cpp
src/solver/optim-model-filler/: CMakeLists.txt  ComponentFiller.cpp  EvaluationContextProvider.cpp  FullKey.cpp  LinearExpression.cpp  PartialKey.cpp  ReadLinearConstraintVisitor.cpp  ReadLinearExpressionVisitor.cpp  TimeDependentLinearExpression.cpp  VariableDictionary.cpp  scenarioGroupRepo.cpp
src/solver/optim-model-filler/include/antares/solver/optim-model-filler/: ComponentFiller.h  EvaluationContextProvider.h  FullKey.h  LinearExpression.h  MCYearAndTime.h  PartialKey.h  ReadLinearConstraintVisitor.h  ReadLinearExpressionVisitor.h  TimeDependentLinearExpression.h  VariableDictionary.h
src/solver/optimisation/: CMakeLists.txt  ComponentToAreaConnectionFiller.cpp  LegacyFiller.cpp  LegacyOrtoolsLinearProblem.cpp  opt_alloc_probleme_a_optimiser.cpp  opt_appel_solveur_lineaire.cpp  opt_appel_solveur_quadratique.cpp  opt_construction_variables_optimisees_lineaire.cpp  opt_decompte_variables_et_contraintes.cpp  opt_gestion_des_bornes_cas_lineaire.cpp  opt_gestion_des_bornes_cas_quadratique.cpp  (+11 more)
src/solver/utils/: CMakeLists.txt  filename.cpp  mps_utils.cpp  ortools_quadratic_wrapper.cpp  ortools_utils.cpp
src/solver/utils/include/antares/solver/utils/: filename.h  mps_utils.h  ortools_quadratic_wrapper.h  ortools_utils.h  ortools_wrapper.h
src/tests/: CMakeLists.txt  macros.cmake
src/tests/src/solver/optimisation/: CMakeLists.txt  adequacy_patch.cpp  test_componentToAreaConnectionFiller.cpp  test_main.cpp
src/tests/src/solver/optimisation/adequacy_patch/: adequacy_patch.cpp
src/tests/src/solver/optimisation/constraints/: CMakeLists.txt  constraints_builder.cpp
src/tests/src/solver/optimisation/translator/: test_translator.cpp
src/tools/: CMakeLists.txt
(+593 files in other folders)
